General Improvements and fixed a major bug.
Added -
  - Better screen size support.
  - Edit page for the registration.
Fixed -
  - Expire date now wraps instead of overflows preventing the view details button going outside of the row.

--- a/ottoman/src/app/vehicles/vehicles.component.scss
+++ b/ottoman/src/app/vehicles/vehicles.component.scss
@@ -165,6 +165,7 @@ $disabled-color: #BBBBBB;
                             flex: 1;
                             padding-left: .2em;
                             padding-right: .2em;
+                            overflow-wrap: break-word;
 
                             .label {
                                 flex: 1;
@@ -174,6 +175,7 @@ $disabled-color: #BBBBBB;
 
                             .status {
                                 flex: 1;
+                                min-width: 2em;
                             }
     
                         }
